[project]
name = "network-analyzer"
version = "1.0.0"
description = "网络通信分析系统 - Flask Web界面"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "flask>=2.3.0",
    "waitress>=2.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "networkx>=3.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "ipysigma>=0.16.0",
]

[project.scripts]
web-analyzer = "web_app.app:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]